# GestureNoticer

./: CMakeLists.txt  main.cpp  readme.md
